# phandio-protocol

./: .gitignore  README.md
contracts/: Cargo.toml  Makefile  README.md
contracts/swap/: Cargo.toml
contracts/swap-router/: Cargo.toml
contracts/swap-router/interact/: config.json
contracts/swap-router/meta/: Cargo.toml
contracts/swap-router/meta/src/: main.rs
contracts/swap-router/src/: lib.rs  swap_proxy.rs  swap_router.rs
contracts/swap-router/wasm/: Cargo.toml
contracts/swap-router/wasm/src/: lib.rs
contracts/swap/interact/: contract.json
contracts/swap/meta/: Cargo.toml
contracts/swap/meta/src/: main.rs
contracts/swap/src/: crypto.rs  events.rs  lib.rs  state.rs  swap.rs
contracts/swap/src/ed25519/: constants.rs  key.rs  mod.rs  point.rs
contracts/swap/wasm/: Cargo.toml
contracts/swap/wasm/src/: lib.rs
monero_utils/: .gitignore  Makefile  README.md  go.mod  go.sum
monero_utils/cmd/cli/: main.go
monero_utils/cmd/wasm/: main.go
monero_utils/pkg/common/: network.go  utils_test.go
mvx/: go.mod  go.sum
mvx/cmd/: main.go
mvx/config/: config.go
mvx/contract/: data.go  requests.go  router.go
mvx/swap/: swap.go
p2p/: Makefile  README.md  go.mod  go.sum
p2p/cmd/cli/: main.go
p2p/cmd/wasm/: main.go
p2p/internal/node/: node.go
p2p/internal/peer/: config.go  message.go  peer.go  protocol.go  state.go  utils.go
p2p/internal/signalling/: client.go  marketplace.go  schemas.go  (+1 more)
p2p/test-app/: index.html  p2p.wasm
signalling/: .env.example  Dockerfile  Makefile  README.md  go.mod  go.sum
signalling/cmd/: server.go
(+39 files in other folders)
